# deskctl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENCE  Makefile  README.md  SKILL.md  flake.nix
.forgejo/workflows/: ci.yml
.github/: README.md
.github/workflows/: ci.yml  publish.yml
demo/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: releasing.md  runtime-contract.md  runtime-output.md
npm/deskctl/: README.md  package.json
npm/deskctl-cli/: README.md  package.json
npm/deskctl-cli/scripts/: postinstall.js  support.js  validate-package.js
npm/deskctl/scripts/: postinstall.js  support.js  validate-package.js
openspec/changes/archive/2026-03-25-stabilize-v0-2-foundation/: design.md  proposal.md
openspec/changes/archive/2026-03-25-stabilize-v0-2-foundation/specs/desktop-runtime/: spec.md
openspec/changes/archive/2026-03-25-test-and-tooling-foundation/: proposal.md  tasks.md
openspec/changes/archive/2026-03-25-test-and-tooling-foundation/specs/repo-quality/: spec.md
openspec/changes/stabilize-v0-2-foundation/: tasks.md
openspec/changes/test-and-tooling-foundation/: design.md  tasks.md
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/src/: themes.mjs
site/src/layouts/: DocLayout.astro
site/src/pages/: architecture.mdx  commands.mdx  index.astro  installation.mdx  quick-start.mdx  runtime-contract.mdx  usage.mdx
site/src/styles/: base.css
skills/: SKILL.md
skills/deskctl/: SKILL.md
skills/deskctl/agents/: openai.yaml
skills/deskctl/references/: commands.md  install.md  runtime-contract.md  sandbox-agent.md
skills/deskctl/templates/: install-deskctl-npm.sh  sandbox-agent-desktop-loop.sh
skills/deskctl/workflows/: observe-act.sh  poll-condition.sh
src/: lib.rs  main.rs  test_support.rs
src/backend/: annotate.rs  mod.rs  x11.rs
src/cli/: connection.rs  mod.rs  upgrade.rs
src/core/: doctor.rs  mod.rs  paths.rs  protocol.rs  refs.rs  session.rs  types.rs
src/daemon/: handler.rs  mod.rs  state.rs
tests/: x11_runtime.rs
tests/support/: mod.rs
