[package]
name = "desktop-ctl"
version = "0.1.0"
edition = "2021"
description = "Desktop control CLI for AI agents - screenshot, click, type, window management on Linux X11"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/agent-computer"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
xcap = "0.8"
image = { version = "0.25", features = ["png"] }
