[package]
name = "deskctl"
version = "0.1.1"
edition = "2021"
description = "X11 desktop control CLI for agents"
license = "MIT"
repository = "https://github.com/harivansh-afk/deskctl"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", features = ["png"] }
imageproc = "0.26"
ab_glyph = "0.2"
enigo = "0.6"
x11rb = { version = "0.13", features = ["randr"] }
